@startuml
    namespace observer.pattern {

        class CourseController [[CourseController.html]] {
            +CourseController(CourseData)
            +addCourse(CourseRecord): void
            +update(Observable): void
            +actionPerformed(ActionEvent): void
            +stateChanged(ChangeEvent): void
            {static} +main(String[]): void
        }

        abstract class Observable [[Observable.html]] {
            +attach(Observer): void
            +detach(Observer): void
            +notifyObservers(): void
            {abstract} +getUpdate(): Object
        }

        class BarChartObserver [[BarChartObserver.html]] {
            +BarChartObserver(CourseData)
            +paint(Graphics): void
            +update(Observable): void
        }

        class CourseData [[CourseData.html]] {
            +addCourseRecord(CourseRecord): void
            +changeCourseRecord(String, int): void
            +getUpdate(): Vector<CourseRecord>
        }

        interface Observer [[Observer.html]] {
            {abstract} +update(Observable): void
        }

        javax.swing.JPanel <|-- CourseController
        Observer <|.. CourseController
        javax.swing.event.ChangeListener <|.. CourseController
        java.awt.event.ActionListener <|.. CourseController
        Observable --> "*" Observer: observers
        javax.swing.JPanel <|-- BarChartObserver
        Observer <|.. BarChartObserver
        Observable <|-- CourseData
    }

    namespace javax.swing {
        class JPanel [[https://docs.oracle.com/javase/8/docs/api/javax/swing/JPanel.html?is-external=true]] {
        }
    }

    namespace javax.swing.event {
        interface ChangeListener [[https://docs.oracle.com/javase/8/docs/api/javax/swing/event/ChangeListener.html?is-external=true]] {
            {abstract} +stateChanged(ChangeEvent): void
        }
    }

    namespace java.awt.event {
        interface ActionListener [[https://docs.oracle.com/javase/8/docs/api/java/awt/event/ActionListener.html?is-external=true]] {
            {abstract} +actionPerformed(ActionEvent): void
        }
    }

    center footer UMLDoclet 2.0.12, PlantUML 1.2020.16
@enduml